# tomato-clock-waybar

./: Cargo.toml  LICENSE  README.md  README_CN.md  notification_plan.md  project_plan.md
config/: default_config.toml
scripts/: direct-waybar-config.json  install.sh  simple-toggle.sh  toggle.sh  waybar-module.sh
sockets/: README.md  install_socket_server.sh  socket_client.py  socket_server.py  socket_service.sh  socket_systemd.service  waybar_socket_module.sh
src/: config.rs  main.rs  persistence.rs  status.rs  timer.rs  waybar.rs  workflow.rs
