[package]
name = "tomato-clock"
version = "0.1.0"
edition = "2021"
description = "A Pomodoro timer application with Waybar integration"
authors = ["You <your.email@example.com>"]
license = "MIT"

[dependencies]
# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

# Command line argument parsing
clap = { version = "4.3", features = ["derive"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Desktop notifications
notify-rust = "4.8"

# File system operations
dirs = "5.0"

# Logging
log = "0.4"
simplelog = "0.12"

# IPC
ipc-channel = "0.16"

# Global state
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
